fixed input width on mobile

--- a/projects/WeatherProject/styles/style.css
+++ b/projects/WeatherProject/styles/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 input {
-    width: 60%;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
